--- a/subjectB.html
+++ b/subjectB.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>プロジェクト開発の紹介</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
-    <img src="" alt="">
+    <h1>プロジェクト開発</h1>
+    <p>gitを使った学習。みんなで協力して取り組む。</p>
+    <img src="img/gitな画像.png" alt="git">
 </body>
 </html>
